# sewage

./: Cargo.toml  README.md
codegen/: Cargo.toml
codegen/src/: lib.rs  prelude.rs
codegen/src/attributes/: mod.rs  test.rs
sewage-codegen/: Cargo.toml  README.md
sewage-codegen/src/: lib.rs  prelude.rs
sewage-codegen/src/attributes/: mod.rs  test.rs
sewage-shared/: Cargo.toml
sewage-shared/src/: error.rs  lib.rs  reexports.rs  result.rs  std_traits.rs
sewage-shared/src/macros/: cfg.rs
sewage-test/: Cargo.toml  README.md
sewage-test/src/: compile.rs  lib.rs  prelude.rs
shared/: Cargo.toml  README.md
shared/src/: lib.rs  reexports.rs
shared/src/macros/: mod.rs
shared/src/tracing/: mod.rs  prelude.rs
src/: lib.rs  prelude.rs  sealed.rs
src/internal/: mod.rs  prelude.rs
src/macros/: cfg.rs
tests/: prelude.rs  tests.rs
tests/compile/attributes/test/fail/: invalid_runtime_arg.rs  invalid_runtime_arg.stderr  no_arguments.rs  no_arguments.stderr  non_async.rs
tests/compile/attributes/test/pass/: valid_args.rs
tests/compile/fail/: test_attribute.rs
tests/compile/fail/test_attribute/: non_async.stderr
