[package]
authors     = ["Philippe Lafontaine <lafontaine.philippe@gmail.com>"]
description = "An experiment library in application service plumbing"
edition     = "2018"
name        = "sewage"
version     = "0.1.0"

[workspace]
members = ["codegen", "shared"]

[dependencies.codegen]
package = "sewage-codegen"
path    = "codegen"

[dependencies.shared]
package = "sewage-shared"
path    = "shared"

[dependencies.serde]
features = ["derive", "alloc"]
version  = "1.0.116"

[dev-dependencies.trybuild]
features = ["diff"]
version  = "1.0.35"
