[package]
authors     = ["Philippe Lafontaine <lafontaine.philippe@gmail.com>"]
description = "An experiment library in application service plumbing"
edition     = "2018"
name        = "sewage"
version     = "0.1.0"

[workspace]
members = ["sewage-codegen", "sewage-shared"]

[dependencies.codegen]
package = "sewage-codegen"
path    = "sewage-codegen"

[dependencies.shared]
package = "sewage-shared"
path    = "sewage-shared"

[dependencies.serde]
features = ["derive", "alloc"]
version  = "1.0.116"

[dev-dependencies.test_prelude]
package = "sewage-test"
path    = "sewage-test"
