[package]
authors     = ["Philippe Lafontaine <lafontaine.philippe@gmail.com>"]
description = "Procedual macros and code generation for the sewage library."
edition     = "2018"
name        = "sewage-codegen"
version     = "0.1.0"

[lib]
proc-macro = true

[dependencies]
proc-macro-error = "1.0.4"
quote            = "1.0.7"

[dependencies.proc-macro2]
features = ["nightly", "span-locations"]
version  = "1.0.23"

[dependencies.shared]
package = "sewage-shared"
path    = "../sewage-shared"

[dependencies.syn]
features = ["full"]
version  = "1.0.42"
